:white_check_mark: Test: 테스트 코드 수정 및 추가